syntax = "proto3";

import "product/product.proto";
import "google/api/annotations.proto";
option go_package = "ordersvc/api/order/v1";

message OrderDetails {
  string order_id = 1;
  repeated Product products = 2;
  repeated int32 quantities = 3;
  double total = 4;
  string order_date = 5;
  string email = 6;
  string shipping_address = 7;
  string status = 8;
}

message Empty {}
message PayloadWithSingleOrder {
  OrderDetails order = 1;
}
message PayloadWithOrderID {
  string order_id = 1;
}

message ListOrderDetailsResponse {
  repeated OrderDetails orders = 1;
}


service Orders {
  rpc AddOrder(PayloadWithSingleOrder) returns (Empty) {
    option (google.api.http) = {
      post: "/orders",
      body: "*"
    };
  }
  rpc ListOrders(Empty) returns (ListOrderDetailsResponse) {
    option (google.api.http) = {
      get: "/orders",
    };
  }

  rpc GetOrder(PayloadWithOrderID) returns (PayloadWithSingleOrder) {
    option (google.api.http) = {
      get: "/orders/{order_id}",
    };
  }
  rpc UpdateOrder(PayloadWithSingleOrder) returns (Empty) {
    option (google.api.http) = {
      put: "/orders",
      body: "*"
    };
  }
  rpc RemoveOrder(PayloadWithOrderID) returns (Empty) {
    option (google.api.http) = {
      delete: "/orders/{order_id}",
    };
  }


}