syntax = "proto3";

package product;

option go_package = "/generated/product;product";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse);
}

message CreateProductRequest {
  string product_name = 1;
  double price = 2;
  int32 quantity = 3;
}

message CreateProductResponse {
  string product_id = 1;
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  string product_id = 1;
  string product_name = 2;
  double price = 3;
  int32 quantity = 4;
  string image_url = 5;
}

message GetAllProductsRequest {}

message GetAllProductsResponse {
  repeated Product products = 1;
}

message Product {
  string product_id = 1;
  string product_name = 2;
  double price = 3;
  int32 quantity = 4;
  string image_url = 5;
}
